WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24438
Simple images with opacity might not need CGTransparencyLayers
https://bugs.webkit.org/show_bug.cgi?id=24438
Summary
Simple images with opacity might not need CGTransparencyLayers
Dean Jackson
Reported
2009-03-06 16:22:35 PST
I'm sharking WebKit running opacity animations on images and note that a lot of time is spent ending the CGTransparencyLayers. There are probably cases where this (slower) path can be avoided.
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2023-04-16 16:04:16 PDT
<
rdar://103334931
> This is also the case for MotionMark 'leaves' subtest, we should try to avoid creating the transparency layers.
Radar WebKit Bug Importer
Comment 2
2023-04-16 16:04:27 PDT
<
rdar://problem/108114199
>
Matt Woodrow
Comment 3
2023-04-16 16:13:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12781
EWS
Comment 4
2023-04-17 13:44:07 PDT
Committed
263035@main
(45759e33816f): <
https://commits.webkit.org/263035@main
> Reviewed commits have been landed. Closing PR #12781 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug