Source/WebCore/rendering/RenderLayerBacking.cpp
@@ -3059,23 +3059,7 @@ bool RenderLayerBacking::isDirectlyCompositedImage() const
 
 bool RenderLayerBacking::isBitmapOnly() const
 {
-    if (m_owningLayer.hasVisibleBoxDecorationsOrBackground())
-        return false;
-
-    if (is<RenderHTMLCanvas>(renderer()))
-        return true;
-
-    if (is<RenderImage>(renderer())) {
-        auto& imageRenderer = downcast<RenderImage>(renderer());
-        if (auto* cachedImage = imageRenderer.cachedImage()) {
-            if (!cachedImage->hasImage())
-                return false;
-            return is<BitmapImage>(cachedImage->imageForRenderer(&imageRenderer));
-        }
-        return false;
-    }
-
-    return false;
+    return m_owningLayer.isBitmapOnly();
 }
 
 
